--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,27 @@
+title: PoplarGrowl's Blog # 网站的标题
+description: > # 网站的描述，可能会出现在搜索引擎展示结果中
+  PoplarGrowl's Blog on Github
+url: "https://poplargrowl.github.io" # 网站地址
+github_repo: poplargrowl/poplargrowl.github.io
+github_profile: "https://github.com/poplargrowl" # GitHub 个人主页
+user: "poplargrowl" # 用于侧栏展示的名字
+paginate: 5 # 主页展示的博客文章数量
+
+# jekyll 相关配置
+markdown: kramdown
+plugins:
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - README.md
+  - COPYING
+  - vendor
+sass:
+  style: compressed
+future: true
+permalink: /:year/:month/:day/:title
 theme: jekyll-theme-merlot
